--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+
+    <nav>
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">Razors</a>
+      </div>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
