--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Razors Check-in</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +14,6 @@
     <nav>
       <div class='nav-wrapper container valign-wrapper'>
         <%= image_tag 'razors-logo.png', class: 'logo' %>
-        <a class='brand-logo right'>Razors Check-in</a>
       </div>
     </nav>
 
