--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,6 @@
+<div class='container center white-text welcome'>
+  <h3>Welcome to Razors</h3>
+  <p>Please find your name on the list below and check in for your appointment</p>
+</div>
 <br>
 <%= react_component("App", props: @props, prerender: false) %>
