--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,39 +1,19 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
 
- @import "materialize/components/color";
- $primary-color: darken(color("grey", "darken-4"), 5%) !default;
+ @import 'materialize/components/color';
+ $primary-color: darken(color('grey', 'darken-4'), 5%) !default;
  $secondary-color: #00ff2b !default;
- @import 'materialize';
+ @import 'materialize', 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
  body {
-   background: color("grey", "darken-4");
+   background: color('grey', 'darken-4');
  }
 
- .collection {
-   border: none;
-   a.collection-item {
-    color: black;
-    height: 15%;
-  }
- }
-
- .scrollable-list {
-   height: 67vh;
-   overflow-y: scroll;
+ nav {
+   height: 88px;
  }
 
  .logo {
@@ -41,6 +21,45 @@
    width: 7.5%;
  }
 
- nav {
-   height: 88px;
+ .brand-logo {
+   font-weight: lighter;
  }
+
+ .welcome {
+   padding-top: .5%;
+   h3, p {
+     font-weight: lighter;
+     color: color('red', 'lighten-5');
+   }
+ }
+
+ .collection {
+   border: none;
+   li.collection-item {
+     height: 15%;
+     padding: 1.25em 2.5em 2.5em;
+     color: black;
+     font-size: 120%;
+   }
+ }
+
+ .check-in-btn {
+   margin-top: -.5em;
+ }
+
+ .checked-in {
+   padding-right: 2.25em;
+ }
+
+ .scrollable-list {
+   height: 50vh;
+   overflow-y: scroll;
+ }
+
+ .arrows {
+   margin-left: -5em;
+ }
+
+ // .scroll-arrow {
+ //   @extend .grey-text, .right;
+ // }
