Move mockData to redux and reorganize redux file structure

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,4 +3,4 @@
   <p>Please find your name on the list below and check in for your appointment</p>
 </div>
 <br>
-<%= react_component("App", props: @props, prerender: false) %>
+<%= react_component('App', prerender: false) %>
